# fastroc

./: .gitignore  CMakeLists.txt  README.md  build.sh  fastrocmodule.c  gmon.out  pyproject.toml  setup.py  test.py
fastroc_bright_lego.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
