[build-system]
requires = ["setuptools", "wheel", "oldest-supported-numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "fastroc"
version = "1.1.2-a2"
authors = [
    { name = "John Ellis", email="12johnellis@gmail.com" }
]
description = "Quickly computes the ROC AUC score of a model"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: C",
    "Operating System :: POSIX",
    "License :: OSI Approved :: MIT License"
]
keywords = ["roc", "ROC", "reciever operating characteristic"]
[project.urls]
Homepage = "https://github.com/brightlego/fastroc"
Issues = "https://github.com/brightlego/fastroc/issues"
Repostiory = "https://github.com/brightlego/fastroc.git"
